# ossx

./: .gitignore  README.md  pyproject.toml
ossx/: __init__.py  _http.py  bucket.py  iterators.py  models.py  patch.py  select_response.py  utils.py
tests/: common.py  test_access_point.py  test_bucket.py  test_http.py  test_iterator.py  test_object.py  test_public_access_block.py  test_qos_and_resource_pool.py  test_select_csv_object.py  test_select_json_object.py  test_select_object.py  test_service.py
